syntax = "proto3";

package maarpc;

option csharp_namespace = "MaaFramework.Binding.Grpc.Interop";

import "types.proto";

message CustomActionInit {
  optional string handle = 1;
  optional string name = 2;
}

message CustomActionRequest {
  optional bool ok = 1;
  oneof result { CustomActionInit init = 101; }
}

message CustomActionRunParam {
  optional string context = 1;
  optional string task = 2;
  optional string param = 3;
  optional Rect box = 4;
  optional string detail = 5;
}

message CustomActionResponse {
  oneof command {
    CustomActionRunParam run = 101;
    bool stop = 102; // void
  }
}
